--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/EnrollCourses/Enroll.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/EnrollCourses/Enroll.cshtml
@@ -17,7 +17,7 @@
         @Html.RenderFlashMessages()
         <fieldset class="box-75">
             @*<legend>Save Course</legend>*@
-            <h2 class="text-center">Enroll in a Course</h2>
+            <h2 class="text-center alert">Enroll in a Course</h2>
             <hr />
             <div class="col-md-12">
                 @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })*@
@@ -96,10 +96,6 @@
 
     </div>
 }
-
-@*<div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>*@
 
 
 @section Scripts {
