--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/RoomAllocation/UnallocatedClassRoom.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/RoomAllocation/UnallocatedClassRoom.cshtml
@@ -54,7 +54,7 @@
                     var jsonData = { decision: decision };
                     $.ajax({
                         type: "POST",
-                        url: '@Url.Action("UnAllocateAllRooms", "ClassRoomAllocation")',
+                        url: '@Url.Action("UnAllocateAllRooms", "RoomAllocation")',
                         contentType: "application/json; charset=utf-8",
                         data: JSON.stringify(jsonData),
                         dataType: "json",
