--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Course/Save.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Course/Save.cshtml
@@ -20,7 +20,7 @@
             <h2 class="text-center">Save Course</h2>
             <hr />
             <div class="col-12">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })*@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
@@ -84,13 +84,9 @@
     </div>
 }
 
-@*<div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>*@
 
 @section scripts
 {
-    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 }
